--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 :root {
-	--primary-clr: #f1f0e9;
-	--secondary-clr: #cedf9f;
-	--card-clr: #f1f3c2;
-	--footer-clr: #27548a;
+	--primary-clr: #f8fafc;
+	--secondary-clr: #bcccdc;
+	--card-clr: #d9eafd;
+	--border-clr: #9aa6b2;
+	--footer-clr: #677a91;
 	--main-font: "Lexend", sans-serif;
 	--main-font-size: 16px;
 	--font-clr: #2a4759;
@@ -26,13 +27,15 @@ body {
 }
 
 .navbar {
+	/* Style for navigation bar */
 	background-color: var(--secondary-clr);
 
 	.container {
+		height: 100%;
+
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		height: 100%;
 	}
 
 	img {
@@ -48,11 +51,14 @@ body {
 		.add-btn {
 			background: linear-gradient(to bottom, #2e466e 5%, #415989 100%);
 			background-color: #2e466e;
+
 			border-radius: 34px;
 			border: 4px solid #1f2f47;
+
 			display: inline-block;
 			cursor: pointer;
 			color: #ffffff;
+
 			font-size: 20px;
 			font-weight: bold;
 			padding: 1rem 2rem;
@@ -70,9 +76,19 @@ body {
 }
 
 .library {
+	width: 90%;
 	background-color: var(--primary-clr);
+	margin-top: 3rem;
+	justify-self: center;
+	
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(100px, 300px));
+	justify-content: center;
+	grid-auto-rows: 200px;
+	gap: 3rem;
 
 	.book-form {
+		/* Style for pop-up form */
 		width: 400px;
 		height: 450px;
 		color: var(--font-clr);
@@ -80,11 +96,11 @@ body {
 		border: 6px solid #1f2f47;
 		border-radius: 18px;
 
-		visibility: hidden;
 		position: fixed;
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
+		visibility: hidden;
 
 		display: flex;
 		flex-direction: column;
@@ -96,9 +112,11 @@ body {
 
 		span {
 			display: block;
+			
 			margin-top: 1rem;
 			margin-bottom: 8px;
 			margin-left: 1rem;
+
 			font-size: 1.5rem;
 		}
 
@@ -146,5 +164,51 @@ body {
 			position: relative;
 			top: 1px;
 		}
+	}
+
+	/* Style for book cards */
+	.book-card {
+		width: 300px;
+		height: 200px;
+		background-color: var(--card-clr);
+		border: 6px solid var(--border-clr);
+		border-radius: 16px;
+
+		display: grid;
+		grid-template-rows: 3fr 1fr 1fr 1fr;
+
+		.book-title {
+			font-size: 1.8rem;
+			font-weight: 600;
+			align-content: center;
+			justify-self: center;
+			color: var(--font-clr);
+		}
+
+		p:not(.book-title) {
+			margin-left: 25px;
+		}
+
+		span {
+			color: var(--font-clr);
+		}
+
+		input[type="checkbox"] {
+			height: 14px;
+			width: 14px;
+		}
+	}
+}
+
+footer {
+	background-color: var(--footer-clr);
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 1rem;
+
+	p {
+		font-size: 1.3rem;
 	}
 }
