--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
-		visibility: visible;
+		visibility: hidden;
 
 		display: flex;
 		flex-direction: column;
@@ -129,6 +129,8 @@ body {
 			border-radius: 24px;
 
 			background-color: rgb(250, 92, 92);
+
+			cursor: pointer;
 		}
 
 		span {
