Made the Card Title text align centered.

--- a/style.css
+++ b/style.css
@@ -215,6 +215,8 @@ body {
 			align-content: center;
 			justify-self: center;
 			color: var(--font-clr);
+
+			text-align: center;
 		}
 
 		p:not(.book-title) {
